force-app/main/default/objects/Student__c/fields/Academic_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Academic_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned academic advisor</description>
    <label>Academic Advisor</label>
    <referenceTo>Academic_Advisor__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Advisees</relationshipName>
    <type>Lookup</type>
</CustomField>