force-app/main/default/objects/Student__c/fields/Academic_Program__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Student&apos;s primary academic program</description>
    <label>Academic Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>