force-app/main/default/objects/Student__c/fields/Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status__c</fullName>
    <label>Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
                <default>true</default>
                <label>Good Standing</label>
            </value>
            <value>
                <fullName>Academic Warning</fullName>
            </value>
            <value>
                <fullName>Academic Probation</fullName>
            </value>
            <value>
                <fullName>Academic Suspension</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>