force-app/main/default/objects/Student__c/fields/Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Level__c</fullName>
    <label>Class Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freshman</fullName>
            </value>
            <value>
                <fullName>Sophomore</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Doctoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>