force-app/main/default/objects/Student__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <label>Credits Earned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>