force-app/main/default/objects/Student__c/fields/Credits_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Credits_in_Progress__c</fullName>
    <label>Credits in Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>