force-app/main/default/objects/Student__c/fields/Cumulative_Credits__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Credits__c</fullName>
    <description>Total credits earned</description>
    <label>Cumulative Credits</label>
    <precision>6</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>