force-app/main/default/objects/Student__c/fields/Current_GPA__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA__c</fullName>
    <description>Current cumulative GPA</description>
    <label>Current GPA</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>