force-app/main/default/objects/Student__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-time</fullName>
                <default>true</default>
                <label>Full-time</label>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>