force-app/main/default/objects/Student__c/fields/Expected_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation__c</fullName>
    <label>Expected Graduation</label>
    <type>Date</type>
</CustomField>