force-app/main/default/objects/Student__c/fields/Financial_Aid_Status__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Status__c</fullName>
    <label>Financial Aid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Work Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>