force-app/main/default/objects/Student__c/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus</fullName>
            </value>
            <value>
                <fullName>Off-Campus</fullName>
            </value>
            <value>
                <fullName>Commuter</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>