force-app/main/default/objects/Student__c/fields/International_Student__c.field-meta.xml
<CustomField>
    <fullName>International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if international student</description>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>