force-app/main/default/objects/Student__c/fields/Last_External_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_External_Sync__c</fullName>
    <label>Last External Sync</label>
    <type>DateTime</type>
</CustomField>