force-app/main/default/objects/Student__c/fields/Last_Risk_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Last_Risk_Calculation__c</fullName>
    <label>Last Risk Calculation</label>
    <type>DateTime</type>
</CustomField>