force-app/main/default/objects/Student__c/fields/Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication__c</fullName>
    <label>Preferred Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Portal Message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>