force-app/main/default/objects/Student__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <formula>IF(Risk_Score__c &gt;= 70, &quot;High&quot;, 
   IF(Risk_Score__c &gt;= 40, &quot;Medium&quot;, &quot;Low&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>