force-app/main/default/objects/Student__c/fields/Statee__c.field-meta.xml
<CustomField>
    <fullName>Statee__c</fullName>
    <label>Statee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>