force-app/main/default/objects/Student__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which university/campus student attends</description>
    <label>University</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>