force-app/main/default/objects/Student__c/recordTypes/Full_time_Student.recordType-meta.xml
<RecordType>
    <fullName>Full_time_Student</fullName>
    <active>true</active>
    <description>Full-time enrolled students</description>
    <label>Full-time Student</label>
</RecordType>