force-app/main/default/objects/Student__c/recordTypes/Part_time_Student.recordType-meta.xml
<RecordType>
    <fullName>Part_time_Student</fullName>
    <active>true</active>
    <description>Part-time enrolled students</description>
    <label>Part-time Student</label>
</RecordType>