force-app/main/default/objects/Student__c/recordTypes/Undergraduate_Student.recordType-meta.xml
<RecordType>
    <fullName>Undergraduate_Student</fullName>
    <active>true</active>
    <description>For undergraduate students (Freshman through Senior)</description>
    <label>Undergraduate Student</label>
</RecordType>