force-app/main/default/objects/Student__c/validationRules/Email_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Format_Validation</fullName>
    <active>true</active>
    <description>Ensures the email field contains a valid email format</description>
    <errorConditionFormula>NOT(REGEX(Email__c, &quot;[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot;))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address</errorMessage>
</ValidationRule>