force-app/main/default/objects/Student__c/validationRules/Realistic_Graduation_Timeline.validationRule-meta.xml
<ValidationRule>
    <fullName>Realistic_Graduation_Timeline</fullName>
    <active>true</active>
    <description>Ensures graduation date is realistic based on enrollment</description>
    <errorConditionFormula>OR(
  Expected_Graduation__c &lt;= Enrollment_Date__c,
  Expected_Graduation__c &gt; (Enrollment_Date__c + (365 * 8))
)</errorConditionFormula>
    <errorDisplayField>Expected_Graduation__c</errorDisplayField>
    <errorMessage>Expected graduation date must be after enrollment date and within 8 years.</errorMessage>
</ValidationRule>