force-app/main/default/objects/Student__c/validationRules/Risk_Score_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Risk_Score_Range_Validation</fullName>
    <active>true</active>
    <description>Ensures risk score is between 0 and 100</description>
    <errorConditionFormula>Risk_Score__c &lt; 0 || Risk_Score__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Risk_Score__c</errorDisplayField>
    <errorMessage>Risk Score must be between 0 and 100</errorMessage>
</ValidationRule>