force-app/main/default/objects/Student__c/validationRules/Valid_Enrollment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Enrollment_Date</fullName>
    <active>true</active>
    <description>Enrollment date must be before expected graduation</description>
    <errorConditionFormula>Enrollment_Date__c &gt; Expected_Graduation__c</errorConditionFormula>
    <errorDisplayField>Expected_Graduation__c</errorDisplayField>
    <errorMessage>Enrollment date cannot be after expected graduation date</errorMessage>
</ValidationRule>