force-app/main/default/objects/Student__c/validationRules/Valid_GPA_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_GPA_Range</fullName>
    <active>true</active>
    <description>Ensures GPA is between 0.0 and 4.0</description>
    <errorConditionFormula>OR(
     Current_GPA__c &gt; 4.0,
     Current_GPA__c &lt; 0.0
   )</errorConditionFormula>
    <errorDisplayField>Current_GPA__c</errorDisplayField>
    <errorMessage>GPA must be between 0.0 and 4.0</errorMessage>
</ValidationRule>